feat: Collapse navigation dropdowns by default
- Hide navigation tree items by default for cleaner UI
- Only show expanded items for current page
- Apply to both level 1 and level 2 navigation items

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -140,6 +140,15 @@ p {
     display: block;
 }
 
+/* Also collapse deeper levels */
+.bd-toc .toctree-l2 > ul {
+    display: none;
+}
+
+.bd-toc .toctree-l2.current > ul {
+    display: block;
+}
+
 
 /* Highlight model customization in navigation */
 .bd-toc a[href*="model_customization"], 
